# groover-challenge

./: .env-example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: main.yml
api/: urls.py  views.py
api/libs/spotify/: auth.py  spotify_api.py  spotify_manager.py
api/migrations/: 0001_initial.py  0002_artist.py  0003_market.py  0004_album.py  0005_artistexternalurl.py  0006_albumexternalurl.py  0007_artistimageurl.py  0008_albumimageurl.py  0009_album_artists.py  0010_rename_artist_id_album_album_id.py  0011_alter_album_artists.py  0012_auto_20210812_2314.py  0013_rename_coutry_code_market_country_code.py
api/models/: __init__.py  album.py  album_external_url.py  album_image_url.py  artist.py  artist_external_url.py  artist_image_url.py  genre.py  market.py
api/tests/: conftest.py
api/tests/models/: test_album.py  test_album_external_url.py  test_album_image_url.py  test_artist.py  test_artist_external_url.py  test_artist_image_url.py  test_genre.py  test_market.py
api/tests/spotify/unit/: test_auth.py  test_spotify_api.py
core/: config.py  settings.py  urls.py
user/: backends.py  managers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_managers.py
user/models/: user.py
