[tool.poetry]
name = "groover_challenge"
version = "0.1.0"
description = ""
authors = ["Arthuchaut <arthuchaut@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.0"
black = "^21.7b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
